# hiring-agent

./: .PR_REVIEW.md  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ASUTOSH_DALEI_RESUME_result.json  CLAUDE_CODE_GUIDE.md  CONTRIBUTING.md  ComprehensiveTestSuiteImplementation.md  DOCKER.md  DOCKER_SETUP.md  DYNAMIC_SCORING.md  Dockerfile  Makefile  PR_DESCRIPTION.md  README.md  Start-Hiring-Agent.bat  api.py  app.py  ats_parseability.py  blog.py  codeforces.py  config.py  config.yaml  config_loader.py  docker-compose.yml  evaluation_validation.py  evaluator.py  explain.py  github.py  gitlab.py  jd_evaluator.py  job_description.txt  keyword_matching.py  lecture.py  leetcode.py  llm_utils.py  main.py  models.py  pdf.py  (+25 more)
.github/workflows/: ci.yml  (+1 more)
evals/: README.md  __init__.py  metrics.py  run_eval.py
frontend/: app.js  index.html  style.css
prompts/: template_manager.py
tests/: README.md  Readme.md  __init__.py  conftest.py  evaluation_failure_test.py  github_projects_fallback_test.py  github_rate_limit_test.py  llm_utils_test.py  models_test.py  security_pdf_regression.py  test_cli_provider_smoke.py  test_evaluation_wiring.py  test_gemini_provider.py  test_gemini_rate_limit_retry.py  test_model_config.py  test_mvp.py  test_provider_format_adaptation.py  test_redaction.py  test_schema_gemini_compat.py  test_section_extraction_robustness.py  transform_date_range_test.py  transform_github_csv_test.py  transform_project_url_test.py
web/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  vercel.json  vitest.config.ts
(+111 files in other folders)
