[project]
name = "hiring-agent"
version = "0.1.0"
description = "Resume-to-score pipeline that extracts structured data from PDFs, enriches with GitHub signals, and outputs a fair, explainable evaluation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyMuPDF==1.26.3",
    "ollama==0.5.1",
    "pydantic==2.11.7",
    "requests==2.32.4",
    "pymupdf4llm==0.0.27",
    "Jinja2==3.1.6",
    "google-generativeai==0.4.0",
    "python-dotenv==1.0.1",
    "black==25.9.0",
]

[tool.uv]
package = false
